{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "db8c8c6b-3ef4-4e18-a6af-536d7b1b02c5",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "4a971b04-c1b8-425a-995e-91e8e3162a40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "91adc0a3-47bd-4322-8cc7-3c977f412e12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "c40a06a0-706e-4a2f-b8ab-d31ca844d339",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd775bb3-d408-40e7-879e-ddadf62dc294",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2410c166-72e6-4609-989b-8f35e944b466",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press,Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "618dc28f-2425-4918-adb3-920642ade3f5",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}